Update styles to fix overflowing header title on numeros page

--- a/frontend/src/pages/styles-numeros.css
+++ b/frontend/src/pages/styles-numeros.css
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-  width: 100%;
+  width: fit-content;
   background-color: #0f91db;
   color: white;
   display: flex;
@@ -27,6 +27,8 @@ header {
 header h1 {
   margin: 0;
   font-size: 1.5em;
+  max-height: 150px;
+  overflow: hidden;
 }
 
 .container {
